--- a/docs/styling.css
+++ b/docs/styling.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   color:#000000;
   font-family: Roman,serif;
+  font-size:1vw;
+ 
 }
 
 section{
@@ -24,20 +26,21 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 170px;
+
     position: fixed;
-    height: 100%;
-    overflow: auto;
-    background-color: #000000;
+
+    
+    
 }
 
 li a {
     font-family: Georgia;
-    font-size: 24pt;
+    font-size: 2.5vw;
     display: block;
     color: #6ee189;
     padding: 8px 0 8px 12px;
     text-decoration: none;
+    padding-left:2vw;
     
 }
 
@@ -61,11 +64,16 @@ h1.header
 }
 
 .wrap {
-  position: relative;
+
+  display:flex;
+  background-image: url("images/stockBck.jpg");
+  background-repeat:repeat;
+  background-position: bottom;
+  background-size:100% 100%;
+
 }
 
-
-.wrap:before {
+ /*  .wrap:before {
   content: ' ';
   display: block;
   position: fixed;
@@ -73,34 +81,45 @@ h1.header
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.4;
-  background-image: url("images/stockBck.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  background-size: cover;
+  
+} */
+#sidebar
+{   background-color: #000000;
+    flex:1;
+    opacity: 100%;
+    font-size:1vw;
+    
+    /* width: 250px;
+    float: left; 
+    margin-right: auto; */
+    
 }
-
 .content {
-  overflow:hidden;
+flex:5;
+
+ /*  overflow:hidden;
   position: relative;
   width:75%;
-  float:right;
-  padding:12px;
+  float:right;*/
+  padding:12px; 
+}
+
+figure {width:100%; margin:auto;}
+img
+{
+    width:100%;    
+    max-width: 1000px;
+    
+    
 }
 
 img.photo
-{
-    width: 650px;
-    height:500px;
-    position:relative;
-}
-#sidebar
-{
-    width: 250px;
-    float: left;
-    margin-right: auto;
+{ margin:auto;
+    width:80%;
+    max-width: 650px;
     
 }
+
 .WP
 {
     width:75%;
