--- a/docs/styling.css
+++ b/docs/styling.css
@@ -1,39 +1,28 @@
-body {
+body 
+{
   margin: 0;
-  color:#000000;
-  font-family: Roman,serif;
-  font-size:1vw;
- 
-}
-
-section{
-    margin-bottom: 8%;
-    padding:2em;
+  color: #000000;
+  font-family: Roman, serif;
+  font-size: 1vw;
 }
 p
 {
+    text-align:center;
     font-size: 16pt;
 }
-figcaption
+ul 
 {
-    color:#3b73f3;
-}
-a {
-  color: #289a1c;
-}
-
-ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-
     position: fixed;
-
-    
-    
 }
-
-li a {
+a 
+{
+  color: #289a1c;
+}
+li a 
+{
     font-family: Georgia;
     font-size: 2.5vw;
     display: block;
@@ -43,89 +32,124 @@ li a {
     padding-left:2vw;
     
 }
-
-li a:visited {
+li a:visited 
+{
     background-color: #4CAF50;
     color: #FFFFFF;
 }
-
-li a:hover {
+li a:hover 
+{
     background-color: #78cecb;
     color: #000000;
 }
 h1.header
 {
-    width:75%;
     text-align:center;
-    position:relative;
-    color:#001f60;
-    float:left;
-    font-size:36pt;
+    color:#35fa52;
+    font-size:42pt;
 }
 
-.wrap {
-
-  display:flex;
+h2
+{
+    text-align:center;
+    font-size:2vw;
+}
+.wrap 
+{
+  display: flex;
   background-image: url("images/stockBck.jpg");
-  background-repeat:repeat;
-  background-position: bottom;
-  background-size:100% 100%;
-
+  background-repeat: repeat;
+  background-position: center;
+  background-size: 80%;
+  background-attachment: scroll;
 }
 
- /*  .wrap:before {
-  content: ' ';
-  display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
+#sidebar 
+{
+  background-color: #000000;
+  flex: 1;
+  font-size: 1vw;
+}
+
+.content 
+{
+  flex: 5;
+  padding: 12px;
+}
+
+.container 
+{
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 100px auto; /* Centering the container horizontally */
+  background-color: #FFFFFF;
+  max-width: 800px; /* Adjust this width as per your preference */
+}
+.head 
+{
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 100px auto; /* Centering the container horizontally */
+  background-color: #000000;
+  max-width: 700px; /* Adjust this width as per your preference */
+}
+.headCont 
+{
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 100px auto; /* Centering the container horizontally */
+  background-color: #000000;
+  max-width: 350px; /* Adjust this width as per your preference */
+}
+img 
+{
   width: 100%;
-  height: 100%;
-  
-} */
-#sidebar
-{   background-color: #000000;
-    flex:1;
-    opacity: 100%;
-    font-size:1vw;
-    
-    /* width: 250px;
-    float: left; 
-    margin-right: auto; */
-    
+  max-width: 1000px;
+  display: block;
+  margin-left: auto;
+  margin-right:auto;
 }
-.content {
-flex:5;
-
- /*  overflow:hidden;
-  position: relative;
-  width:75%;
-  float:right;*/
-  padding:12px; 
-}
-
-figure {width:100%; margin:auto;}
-img
+img.logo 
 {
-    width:100%;    
-    max-width: 1000px;
-    
-    
+  max-width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right:auto;
 }
-
-img.photo
-{ margin:auto;
-    width:80%;
-    max-width: 650px;
-    
-}
-
-.WP
+img.git 
 {
-    width:75%;
-    text-align:center;
-    position:relative;
-    float:left;
-    font-size:24pt;
-    margin-top:auto;
+  width: 100%;
+  max-width: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right:auto;
+}
+figcaption 
+{
+  font-size:small;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  color: #3b73f3;
+  text-align: center; /* Centering the text */
+  padding: 8px; /* Add padding for the box */
+  border: 1px solid #ccc;
+  margin: 20px auto; /* Centering the container horizontally */
+  background-color: #FFFFFF;
+  max-width: 175px; /* Adjust this width as per your preference */
+}
+/* Define the code box */
+.code-box 
+{
+  background-color: #f4f4f4;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+  overflow-y: auto; /* Enable vertical scrollbar if needed */
+  max-height: 200px; /* Set maximum height */
+}
+
+/* Preserve formatting within the code block */
+.code-box pre 
+{
+  white-space: pre-wrap;
 }
